--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="title_reminder">Reminder</string>
     <string name="title_todolist">To do list</string>
     <string name="title_settings">Settings</string>
+
+    <string-array name="languages">
+        <item>Select language</item>
+        <item>English</item>
+        <item>华语</item>
+        <item>Bahasa Melayu</item>
+    </string-array>
 </resources>
