--- a/app/src/main/res/values-ms/strings.xml
+++ b/app/src/main/res/values-ms/strings.xml
@@ -1,15 +1,14 @@
 <resources>
     <string name="app_name">Hallo</string>
-    <string name="title_home">Home</string>
-    <string name="title_reminder">Reminder</string>
+    <string name="title_home">主页</string>
+    <string name="title_reminder">提醒</string>
     <string name="title_todolist">To do list</string>
     <string name="title_settings">Settings</string>
 
     <string-array name="languages">
-        <item>Select language</item>
+        <item>Pilih Bahasa</item>
         <item>English</item>
         <item>华语</item>
         <item>Bahasa Melayu</item>
     </string-array>
-
 </resources>
