--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -6,10 +6,9 @@
     <string name="title_settings">Settings</string>
 
     <string-array name="languages">
-        <item>Select language</item>
+        <item>选择语言</item>
         <item>English</item>
         <item>华语</item>
         <item>Bahasa Melayu</item>
     </string-array>
-
 </resources>
