--- a/app/src/main/res/values-ms/strings.xml
+++ b/app/src/main/res/values-ms/strings.xml
@@ -4,7 +4,14 @@
     <string name="title_reminder">提醒</string>
     <string name="title_todolist">To do list</string>
     <string name="title_settings">Settings</string>
-
+    <string name="todolist_emptylist">没事做</string>
+    <string name="todolist_cancel">取消</string>
+    <string name="todolist_save">保存</string>
+    <string name="todolist_title">标题</string>
+    <string name="todolist_listhint">每一行是一个任务项目</string>
+    <string name="todolist_titlehint">名单标题</string>
+    <string name="todolist_adddialogheader">添加Todo列表</string>
+    <string name="todolist_updatedialogheader">Todo list</string>
     <string-array name="languages">
         <item>Pilih Bahasa</item>
         <item>English</item>
