--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,14 @@
     <string name="title_reminder">Reminder</string>
     <string name="title_todolist">To do list</string>
     <string name="title_settings">Settings</string>
+    <string name="todolist_emptylist">Nothing to do</string>
+    <string name="todolist_cancel">Cancel</string>
+    <string name="todolist_save">Save</string>
+    <string name="todolist_title">Title</string>
+    <string name="todolist_listhint">each line is a todo item</string>
+    <string name="todolist_titlehint">Title of list</string>
+    <string name="todolist_adddialogheader">Add Todo list</string>
+    <string name="todolist_updatedialogheader">Todo list</string>
 
     <string-array name="languages">
         <item>Select language</item>
